# rust-fun

./: Cargo.toml
src/: main.rs
